--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	   	compile 'org.hibernate:hibernate-core:4.2.21.Final'
 	   	compile 'org.hibernate:hibernate-entitymanager:4.2.21.Final'
 	   	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0'
-	   	//compile group: 'javax.persistence', name: 'persistence-api', version: '1.0' 
 	   	compile 'taglibs:standard:1.1.2'
 	   	compile 'javax.servlet:jstl:1.1.2'
+	   	testCompile 'junit:junit:4.12'
 }
