--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,15 @@ dependencies {
 	   	compile 'org.springframework:spring-core:4.2.0.RELEASE'
 	   	compile 'org.springframework.security:spring-security-web:4.2.0.RELEASE'
 	   	compile 'org.springframework.security:spring-security-config:4.2.0.RELEASE'
-	   	compile 'javax.servlet:javax.servlet-api:3.1.0'
+	   	compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
 	   	compile 'org.hibernate:hibernate-core:4.2.21.Final'
 	   	compile 'org.hibernate:hibernate-entitymanager:4.2.21.Final'
 	   	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0'
 	   	compile 'taglibs:standard:1.1.2'
 	   	compile 'javax.servlet:jstl:1.1.2'
+		compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
+		compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
+		
+	   	
 	   	testCompile 'junit:junit:4.12'
 }
