--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	   	compile 'org.hibernate:hibernate-core:4.2.21.Final'
 	   	compile 'org.hibernate:hibernate-entitymanager:4.2.21.Final'
 	   	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0'
+	   	compile group: 'org.springframework', name: 'spring-orm', version: '4.3.13.RELEASE'
 	   	compile 'taglibs:standard:1.1.2'
 	   	compile 'javax.servlet:jstl:1.1.2'
 		compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
